fix[]: conserta conflitos